[gd_scene load_steps=3 format=3 uid="uid://dfb6h3vaxsoo0"]

[ext_resource type="Script" path="res://src/mission_selection/mission_selection.gd" id="1_oeulx"]
[ext_resource type="PackedScene" uid="uid://t0qjigps7h5c" path="res://src/ui/scrolling_background.tscn" id="2_xwkgo"]

[node name="MissionSelection" type="Node2D"]
script = ExtResource("1_oeulx")

[node name="ScrollingBackground" parent="." instance=ExtResource("2_xwkgo")]
offset_right = 1024.0
offset_bottom = 1024.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainerMissions" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonMainMenu" type="Button" parent="CanvasLayer"]
offset_right = 109.0
offset_bottom = 55.0
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
